# src/routers/contacts.js
@@ -1,45 +1,0 @@
-import express from 'express';
-import {
-  getContacts,
-  getContactByIdController,
-  createNewContactController,
-  updateContactController,
-  deleteContactController,
-} from '../controllers/contacts.js';
-
-import { ctrlWrapper } from '../utils/ctrlWrapper.js';
-import { validateBody } from '../middlewares/validateBody.js';
-import { isValidId } from '../middlewares/isValidId.js';
-import {
-  createContactSchema,
-  updateContactSchema,
-} from '../validation/contacts.js';
-import { authenticate } from '../middlewares/authenticate.js';
-import { upload } from '../middlewares/upload.js';
-
-const router = express.Router();
-
-router.use(authenticate);
-
-router.get('/', ctrlWrapper(getContacts));
-
-router.get('/:contactId', isValidId, ctrlWrapper(getContactByIdController));
-
-router.post(
-  '/',
-  upload.single('photo'),
-  validateBody(createContactSchema),
-  createNewContactController,
-);
-
-router.patch(
-  '/:contactId',
-  isValidId,
-  upload.single('photo'),
-  validateBody(updateContactSchema),
-  ctrlWrapper(updateContactController),
-);
-
-router.delete('/:contactId', isValidId, ctrlWrapper(deleteContactController));
-
-export default router;
